<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enter_confirmation_code">لتأكيد عملية الدفع بقيمة %1$s ادخل الكود السري لمحفظتك</string>
    <string name="pay">دفع</string>
    <string name="round_trip">ذهاب واياب</string>
    <string name="proceed">تنفيذ</string>
    <string name="get_a_ticket">احصل على تذكرة</string>
    <string name="one_way">ذهاب</string>
    <string name="book_your_ticket_now">احجز تذكرتك الآن</string>
    <string name="to">الي</string>
    <string name="from">من</string>
    <string name="enter_confirmation_details">"Enter confirmation to verify %d transaction payment "</string>
</resources>