<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/blue_600"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_arabic"
        android:text="@string/get_a_ticket"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_arabic"
        android:text="@string/book_your_ticket_now"
        android:textColor="#42DD51"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/bus_with_loacation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_trip_reservation_type"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/background_selected_reservation_type"
            android:fontFamily="@font/montserrat_arabic"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/one_way"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fromConstraintLayout"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginHorizontal="23dp"
        android:background="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

        <TextView
            android:id="@+id/fromTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_arabic"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutSource"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:imeActionId="@integer/btm_to"
            android:paddingVertical="4dp"
            android:textCursorDrawable="@color/blue_600"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:fontFamily="@font/montserrat_arabic"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginHorizontal="23dp"
        android:background="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromConstraintLayout">

        <TextView
            android:id="@+id/toTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_arabic"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutDestination"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:imeActionId="@integer/btm_to"
            android:paddingVertical="4dp"
            android:textCursorDrawable="@color/blue_600"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:fontFamily="@font/montserrat_arabic"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="23dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/red_400"
        android:enabled="false"
        android:fontFamily="@font/montserrat_arabic"
        android:text="@string/proceed"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticket_quantity" />


    <TextView
        android:id="@+id/ticket_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/quantity_background"
        android:fontFamily="@font/abeezee"
        android:padding="@dimen/_10sdp"
        android:text="9"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ticket_plus"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:src="@drawable/plus_background"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/ticket_quantity"
        app:layout_constraintStart_toEndOf="@+id/ticket_quantity"
        app:layout_constraintTop_toTopOf="@+id/ticket_quantity" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ticket_minus"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:minHeight="0dp"
        android:src="@drawable/minus_background"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/ticket_quantity"
        app:layout_constraintEnd_toStartOf="@+id/ticket_quantity"
        app:layout_constraintTop_toTopOf="@+id/ticket_quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>